--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p>Welcome to the Odin Recipes project! This is a simple recipe website where you can find various recipes.</p>
+    <p>Click on the links below to view the recipes:</p>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <!--commenting out the other recipes for now
+
+            <li><a href="recipes/pancakes.html">Pancakes</a></li>
+            <li><a href="recipes/salad.html">Salad</a></li>
+        
+        -->
+    </ul>
     
 </body>
 </html>
