--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../index.html">Back to Home</a>
     <h1>Lasagna</h1>
     <h2>Ingredients</h2>
     
